<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/history"
        android:textColor="@color/md_grey_white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/media_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:clipToPadding="false" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/no_media_found"
        android:textColor="@color/md_grey_white"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/history_mode_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:background="@android:color/transparent"
        app:tabBackground="@drawable/tab_indicator"
        app:tabIndicator="@null"
        app:tabMode="auto"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/md_grey_600_dark"
        app:tabTextColor="@color/md_grey_white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>
